# Auction

src/: CMakeLists.txt  main.cpp
src/auction/: Auction.cpp  Auction.hpp  CMakeLists.txt  Evaluator.cpp  Evaluator.hpp  Throw.cpp  Throw.hpp  User.cpp  User.hpp
src/tests/: CMakeLists.txt  evaluation.cpp  user.cpp
